--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Salon de Belleza</title>
+	<title>Beauty & Salón</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" href="./assets/reset.css">
@@ -42,23 +42,25 @@
 			</div>
 		</nav>
 	</header>
+
 	<main class="main-container">
-		<div id="carouselExampleCaptions" class="carousel slide  mt-8  col-lg-10">
+		<section id="carouselExampleCaptions" class="carousel slide  mt-8  col-lg-10">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img src="img/carousel1.webp" class="d-block carousel-img" alt="...">
 					<div class="carousel-caption d-none d-md-block ml-0  ">
 						<p class="carousel-title">¡Tu nueva apariencia comienza aquí!</p>
-					<a href="#contacto"><button type="button" class="mt-5 btn-reservar  p-3 w-50   fs-6 ">Reservar una
-							cita</button></a>
+						<a href="#contacto"><button type="button" class=" btn-reservar p-2 p-lg-3 mt-lg-5 mt-3">Reservar
+								una
+								cita</button></a>
 					</div>
 				</div>
-				
-			</div>
-			
-		</div>
 
-		<section class="d-flex justify-content-center ">
+			</div>
+
+		</section>
+
+		<section class="d-flex justify-content-center">
 			<div class="principal-contenedor">
 				<h2 class=" mt-5 d-flex justify-content-center fs-3 text-warning">¡Bienvenidos al Beauty!</h2>
 				<p class="mt-3 align-items-center text-center fs-5" id="mision"> <em> Nuestra misión es:<strong>
@@ -68,9 +70,9 @@
 			</div>
 		</section>
 
-		<section class="container-servicio  ">
-			<div class="d-flex flex-column  gap-5 bg-black justify-content-center ">
-				<div class="d-flex flex-column align-items-center   gap-5 justify-content-center flex-lg-row flex-md-row ">
+		<section class="container-servicio ">
+			<div class="d-flex flex-column align-items-center  gap-5 bg-black justify-content-center ">
+				<div class="d-flex flex-column   gap-5 justify-content-center flex-lg-row flex-md-row ">
 					<div class="card border-0 mt-5 " style="width: 18rem;">
 						<img src="img/img-1.jpg" class="card-img-top" alt="...">
 						<div class="card-body bg-black ">
@@ -83,7 +85,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="card border-0 mt-5" style="width: 18rem;">
+					<section class="card border-0 mt-5" style="width: 18rem;">
 						<img src="img/imgS-2.jpg" class="card-img-top h-auto " alt="...">
 						<div class="card-body bg-black ">
 							<p class="text-white d-flex justify-content-center fs-5  ">Color</p>
@@ -92,7 +94,7 @@
 								tratamientos capilares
 								premium.</p>
 						</div>
-					</div>
+					</section>
 					<div class="card mt-5 border-0" style="width: 18rem;">
 						<img src="img/imgS-3.jpeg" class="card-img-top" alt="...">
 						<div class="card-body bg-black ">
@@ -104,14 +106,15 @@
 					</div>
 				</div>
 				<div class="text-center fs-5 mb-5">
-				<button id="servicio" type="button" class="p-3  btn-servicio">Ver servicios</button>
+					<a href="./servicios.html"><button id="servicio" type="button" class="p-3  btn-servicio">Ver
+							servicios</button></a>
 				</div>
 			</div>
 			</div>
 		</section>
 
 
-		<section class="mt-5 ">
+		<section class="mt-5">
 			<h3 class="d-flex justify-content-center fs-3 text-warning"> Por qué elegirnos</h3>
 			<div class="d-flex justify-content-center mt-5 flex-wrap">
 				<ul class="lista-diferenciales">
@@ -122,19 +125,19 @@
 					<li class="items fst-italic"> Puntualidad </li>
 					<li class="items fst-italic"> Limpieza </li>
 				</ul>
-				
 
-			
+
+
 				<img src="img/img-2.jpg" class="imagen-diferenciales">
 			</div>
 		</section>
 
 		<section class=" mt-5 d-flex justify-content-center ">
 			<div class=" mt-5  ">
-				<iframe 
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104916.14137571331!2d-58.35320507042187!3d-34.73973433297766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32e40864ce019%3A0xb46bf0e5f8abafc6!2sQuilmes%20Peatonal!5e0!3m2!1ses-419!2sar!4v1699239361004!5m2!1ses-419!2sar" 
-				width="1250" height="500" style="border:0;" 
-				allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104916.14137571331!2d-58.35320507042187!3d-34.73973433297766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32e40864ce019%3A0xb46bf0e5f8abafc6!2sQuilmes%20Peatonal!5e0!3m2!1ses-419!2sar!4v1699239361004!5m2!1ses-419!2sar"
+					width="1250" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+					referrerpolicy="no-referrer-when-downgrade">
 				</iframe>
 			</div>
 		</section>
@@ -142,8 +145,8 @@
 
 	<!-- Footer -->
 	<footer>
-		<section class="footer-container">
-			<div class="d-flex text-center flex-column  ml-5 justify-content-around flex-lg-row  ">
+		<section class="footer-container ">
+			<div class="d-flex flex-column text-center text-lg-start  ml-5 justify-content-around flex-lg-row  ">
 				<div class="col-md-5 d-flex flex-column gap-5 ">
 					<div class="text-center">
 						<h6 class="text-center fs-4 text-white mt-5">¡Visitanos!</h6>
@@ -172,7 +175,7 @@
 						</svg>
 					</div>
 				</div>
-				<div  class="">
+				<div class="">
 					<h5 id="contacto" class=" fs-4 text-center text-white mt-5 ">Contactanos</h5>
 
 					<form class="mt-4 d-flex flex-column " id="form" method="POST">
@@ -208,20 +211,24 @@
 						</fieldset>
 
 						<div class="form-field-wrapper d-flex justify-content-center justify-content-lg-start">
-							<button class="d-flex flex-column mt-3 mb-3  boton-enviar text-white mb-lg-5 " type="submit">Enviar
+							<button class="d-flex flex-column mt-3 mb-3  boton-enviar text-white mb-lg-5 "
+								type="submit">Enviar
 								Mensaje</button>
 						</div>
 					</form>
 				</div>
 		</section>
-	
-			<h5 class="copy fs-5 text-center ">&#169;Desarrollado por Lourdes Avalos </h5>
-		
+
+		<h5 class="copy fs-5 text-center ">&#169;Desarrollado por Lourdes Avalos </h5>
+
 	</footer>
-	<script src="./js/app.js" type="module"></script>
+
+	<script src="./js/app.js" type="module">
+	</script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
 	</script>
+
 </body>
 
 </html>
